--- a/css/styles.css
+++ b/css/styles.css
@@ -91,77 +91,7 @@ h1 {
   border-bottom-right-radius: 40px;
 }
 
-/* here will be the modal styles. */
-
-#modal-container {
-  display: none;
-}
-
-#modal-container.is-visible {
-  position: fixed;
-  padding: 20px;
-  box-sizing: border-box;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  /* box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0, 0.8), 0 7px 20px 0 rgba(0, 0, 0, 0, 0.17); */
-
-  /* to show it above other content */
-  z-index: 999;
-
-  /* to allow scrolling if the screen is not high enough*/
-  overflow: auto;
-
-  /* this is used to center the modal */
-  display: grid;
-  text-align: center;
-}
-
-.modal {
-  margin: auto;
-  display: inline-block;
-  box-sizing: border-box;
-  background: #fff;
-  padding: 15px;
-  width: 100%;
-  max-width: 700px;
-  text-align: center;
-
-  /* add some style to the opening of the modal area */
-  animation-name: modalopen;
-  animation-duration: 1s;
-
-  /* boxshadow doesnt seem to be working properly removing for now.
-  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0, 0.8), 0 7px 20px 0 rgba(0, 0, 0, 0, 0.17); */
-}
-
-.modal-close {
-  float: right;
-  -webkit-appearance: none;
-  border: 0;
-  background: none;
-  color: #777;
-  text-decoration: none;
-  font-size: 50px;
-}
-
-.modal h1 {
-  margin-top: 0;
-  margin: 0%;
-  text-transform: uppercase;
-}
-
-.modal p {
-  margin-bottom: 0;
-}
-
-@keyframes modalopen {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+img {
+  border: 2px solid black;
+  border-radius: 20px;
 }
