--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ button:active {
 
 .movies {
   list-style-type: none;
-  padding-left: 0;
+  /* padding-left: 0; */
   text-align: center;
 }
 
@@ -93,5 +93,33 @@ h1 {
 
 img {
   border: 2px solid black;
-  border-radius: 20px;
+  /* border-radius: 20px; */
+  /* padding: 120px; */
+  height: 200px;
+  /* width: 200px; */
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+img:hover {
+  /* opacity: 0.7; */
+  transform: scale(2.0);
+}
+
+.grid {
+  /* display: -ms-grid; */
+  display: grid;
+  /* -ms-grid-columns: 1fr 20px 1fr 20px 1fr; */
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 10px;
+  background-color: #fff;
+  color: #444;
+}
+
+@media all and (max-width: 500px) {
+  .grid {
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
+  }
 }
